# 2020.pybeach.org

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  PyBeach 2020.lektorproject  README.rst  docker-compose.yaml  index.html  netlify.toml  pyproject.toml
assets/static/style/: _fonts.scss  _main.scss  _variables.scss  style.css  style.scss
assets/style/: _main.scss  _variables.scss
configs/: scsscompile.ini
content/: contents.lr
content/conduct/: contents.lr
content/conduct/attendee-procedure-for-incident-handling/: contents.lr
content/conduct/staff-procedure-for-incident-handling/: contents.lr
content/schedule/: contents.lr
content/speakers/: contents.lr
content/sponsors/: contents.lr
content/sprints/: contents.lr
content/talks/: contents.lr
content/venue/: contents.lr
templates/: layout.html  page.html
